--- a/hardware/.gitignore
+++ b/hardware/.gitignore
@@ -1,3 +1,5 @@
+# EAGLE
+
 *.b#1
 *.b#2
 *.b#3
@@ -17,6 +19,7 @@
 *.s#8
 *.s#9
 
+# GERBER
 
 *.GBL
 *.GBO
@@ -28,3 +31,17 @@
 *.GTP
 *.GTS
 *.TXT
+
+
+
+############
+## Windows
+############
+
+# Windows image file caches
+Thumbs.db
+
+# Folder config file
+Desktop.ini
+
+
